Index page fixed avoiding images overflow.

--- a/web-app/css/ddb.tiz.css
+++ b/web-app/css/ddb.tiz.css
@@ -15,12 +15,18 @@ div.searchResults .item .subtitle {
 	word-wrap: break-word;
 }
 
+div.container{
+	width:950px;
+	min-height:515px;
+	margin:0 auto
+}
+
 ul.images {
   margin: 0;
   padding: 0;
   white-space: nowrap;
-  width: 900px;
-  overflow-x: auto;
+  width: 950px;
+  /*overflow-x: auto;*/
   background-color: #ddd;
 }
 
